# sendfile

./: README.md  pyproject.toml
sendfile/: __main__.py  client.py  server.py  utils.py
