[project]
name = "sendfile"
version = "0.1.1"
description = "send and recieve files across the local network"
authors = [
    { name = "sctech", email = "gamerselimiko@gmail.com" }
]
dependencies = [
    "requests"
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent"
]
readme = "README.md"
urls = { homepage = "https://github.com/sctech-tr/sendfile" }

[project.scripts]
sendfile = "sendfile.__main__:main"

[tool.setuptools]
packages = ["sendfile"]
include-package-data = true

[tool.setuptools.package-data]
"shpkg" = ["data/*.json", "config/*.ini"]
